# computer-graphics-algorithms

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: main.cpp
vsproject/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  placeholder.sln  placeholder.vcxproj  placeholder.vcxproj.filters
